[package]
name = "rsmtuproxy"
version = "0.1.0"
authors = ["Alisina Bahadori <alisina.bm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.x"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
cached = "0.17.x"
openssl = { version = "0.10", features = ["vendored"] }
